--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@ body {
 .top-title{
     display: inline;
     line-height: 76px;
-    margin: 54px;
     font-size: 57px;
     color: tomato;
+    text-shadow: 2px 2px 2px green;
 }
 .top-phone{
     float: right;
@@ -219,4 +219,10 @@ body {
     width: 100%;
     min-height: 3em;
     margin-top: 30em;
+}
+.logo{
+    width: 5em;
+    height: 5em;
+    border-radius: 50%;
+    margin-bottom: 40px;
 }
